# VMSStreamerQT

./: .gitignore  CMakeLists.txt  Makefile  README.md  credentials.example.json
.github/workflows/: release.yml
packaging/: VMSstreamerQt.desktop
src/: MainWindow.cpp  MainWindow.h  main.cpp
